# battery-pack

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  WIP.md  _typos.toml  book.toml  init.py  release-plz.toml
.claude/: settings.local.json
battery-packs/ci-battery-pack/: CHANGELOG.md  Cargo.toml  README.md
battery-packs/ci-battery-pack/snippets/github/: ci-pass.yml
battery-packs/ci-battery-pack/snippets/github/jobs/: bench.yml  clippy-sarif.yml  clippy.yml  docsrs.yml  features.yml  fmt.yml  fuzz-smoke.yml  lockfile.yml  minimal-versions.yml  msrv.yml  semver.yml  spellcheck.yml  stress-test.yml  warnings.yml  xtask.yml
battery-packs/ci-battery-pack/src/: lib.rs
battery-packs/ci-battery-pack/src/snapshots/: maximalist.txt  minimalist.txt  standalone_benchmarks.txt  standalone_binary_release.txt  standalone_clippy_sarif.txt  standalone_fuzzing.txt  standalone_mdbook.txt  standalone_mutation_testing.txt  standalone_spellcheck.txt  standalone_stress_test.txt  standalone_trusted_publishing.txt  standalone_xtask.txt
battery-packs/ci-battery-pack/templates/benchmarks/: bp-template.toml
battery-packs/ci-battery-pack/templates/binary-release/: bp-template.toml
battery-packs/ci-battery-pack/templates/clippy-sarif/: bp-template.toml
battery-packs/ci-battery-pack/templates/full/: _Cargo.toml  book.toml  bp-template.toml  release-plz.toml
battery-packs/ci-battery-pack/templates/full/.cargo/: config.toml
battery-packs/ci-battery-pack/templates/full/fuzz/: Cargo.toml
battery-packs/ci-battery-pack/templates/full/md/: SUMMARY.md  intro.md
battery-packs/ci-battery-pack/templates/full/xtask/: Cargo.toml
battery-packs/ci-battery-pack/templates/fuzzing/: bp-template.toml
battery-packs/ci-battery-pack/templates/fuzzing/fuzz/: Cargo.toml
battery-packs/ci-battery-pack/templates/mdbook/: book.toml  bp-template.toml
battery-packs/ci-battery-pack/templates/mdbook/md/: intro.md
battery-packs/ci-battery-pack/templates/mutation-testing/: bp-template.toml
battery-packs/ci-battery-pack/templates/trusted-publishing/: bp-template.toml
battery-packs/ci-battery-pack/templates/xtask/: bp-template.toml
battery-packs/ci-battery-pack/templates/xtask/xtask/: Cargo.toml
battery-packs/cli-battery-pack/: CHANGELOG.md  Cargo.toml  README.md
battery-packs/cli-battery-pack/src/: lib.rs
battery-packs/cli-battery-pack/templates/simple/: Cargo.toml
battery-packs/cli-battery-pack/templates/subcmds/: Cargo.toml
battery-packs/logging-battery-pack/: CHANGELOG.md  Cargo.toml
src/battery-pack/: CHANGELOG.md  Cargo.toml  README.md
src/battery-pack/bphelper-build/: CHANGELOG.md  Cargo.toml
src/battery-pack/bphelper-build/src/: lib.rs  tests.rs
src/battery-pack/bphelper-build/tests/snapshots/: bphelper_build__tests__test_crate_table_update_is_automatic.txt  bphelper_build__tests__test_full_pipeline_basic.txt  bphelper_build__tests__test_full_pipeline_fancy.txt  bphelper_build__tests__test_generate_docs_writes_output_file.txt  bphelper_build__tests__test_render_custom_template.txt  bphelper_build__tests__test_render_default_template.txt
src/battery-pack/bphelper-cli/: CHANGELOG.md  Cargo.toml
src/battery-pack/bphelper-cli/src/: commands.rs  lib.rs  manifest.rs  registry.rs  template_engine.rs  tui.rs  validate.rs
src/battery-pack/bphelper-cli/src/commands/: mod.rs  tests.rs
src/battery-pack/bphelper-cli/src/manifest/: mod.rs  tests.rs
src/battery-pack/bphelper-cli/src/merge/: mod.rs  tests.rs
src/battery-pack/bphelper-cli/src/registry/: mod.rs  tests.rs
src/battery-pack/bphelper-cli/src/template_engine/: tests.rs
src/battery-pack/bphelper-cli/src/tui/: tests.rs
src/battery-pack/bphelper-cli/src/validate/: mod.rs  tests.rs
src/battery-pack/bphelper-cli/tests/: bp_managed.rs  group1_tags.rs  group2_add.rs  group2_add_integration.rs  list.rs  manifest_registration.rs  show.rs  status.rs  sync_behavior.rs  toml_preservation.rs  validate.rs  validate_extras.rs
src/battery-pack/bphelper-cli/tests/snapshots/: bphelper_cli__commands__tests__add_all_features_basic.txt  (+21 more)
src/battery-pack/bphelper-manifest/: CHANGELOG.md  Cargo.toml
src/battery-pack/bphelper-manifest/src/: lib.rs
src/battery-pack/src/: build.rs  lib.rs
src/battery-pack/templates/default/: Cargo.toml  Cargo.toml.liquid  README.md  _Cargo.toml  bp-template.toml  cargo-generate.toml  docs.handlebars.md
src/battery-pack/templates/with_template/: _Cargo.toml  bp-template.toml
src/battery-pack/tests/: new_suffix.rs
src/bphelper-build/: Cargo.toml
src/bphelper-cli/: Cargo.toml
src/bphelper-cli/src/: lib.rs
src/cargo-bp/: CHANGELOG.md  Cargo.toml  README.md
src/cargo-bp/tests/: add_template.rs  show_preview.rs  with_template.rs
src/cargo-bp/tests/snapshots/: add_template_no_conflicts.txt  with_template__with_template_two_level_generation.txt  with_template__with_template_two_level_generation@1.txt  with_template__with_template_two_level_generation@2.txt  with_template__with_template_two_level_generation@3.txt  with_template__with_template_two_level_generation@4.txt
src/cli-battery-pack/: CHANGELOG.md  Cargo.toml  README.md
src/cli-battery-pack/examples/: mini-grep.rs
src/cli-battery-pack/src/: README.md  lib.rs  main.rs
src/cli-battery-pack/templates/simple/: Cargo.toml  Cargo.toml.liquid  build.rs
src/cli-battery-pack/templates/subcmds/: Cargo.toml  Cargo.toml.liquid  cargo-generate.toml
src/error-battery-pack/: CHANGELOG.md  Cargo.toml  README.md
src/error-battery-pack/examples/: basic.rs  context-chain.rs  custom-errors.rs
src/error-battery-pack/src/: lib.rs
src/logging-battery-pack/: CHANGELOG.md  Cargo.toml
src/logging-battery-pack/src/: lib.rs
tests/fixtures/basic-battery-pack/: Cargo.toml
tests/fixtures/basic-battery-pack/src/: lib.rs
tests/fixtures/broken-battery-pack/: Cargo.toml
tests/fixtures/broken-battery-pack/src/: helper.rs  lib.rs
tests/fixtures/fancy-battery-pack/: Cargo.toml
tests/fixtures/fancy-battery-pack/src/: lib.rs
tests/fixtures/managed-battery-pack/: Cargo.toml
tests/fixtures/managed-battery-pack/src/: lib.rs
(+70 files in other folders)
