[workspace]
members = [
    "src/battery-pack",
    "src/battery-pack/bphelper-cli",
    "src/battery-pack/bphelper-manifest",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
cargo-generate = "0.22"
cargo_metadata = "0.23"
expect-test = "1"
serde_json = "1"
toml = "0.8"

[workspace.dependencies.clap]
version = "4"
features = ["derive"]

[workspace.dependencies.reqwest]
version = "0.12"
features = [
    "blocking",
    "json",
]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]
