[workspace]
members = [
    "src/battery-pack",
    "src/battery-pack/bphelper-build",
    "src/battery-pack/bphelper-cli",
    "src/battery-pack/bphelper-manifest",
    "src/error-battery-pack",
    "src/logging-battery-pack",
]
resolver = "2"

[workspace.dependencies]
battery-pack = { path = "src/battery-pack", version = "0.4" }
anyhow = "1"
cargo-generate = "0.22"
cargo_metadata = "0.23"
handlebars = "6"
expect-test = "1"
tempfile = "3"
serde_json = "1"
thiserror = "2"
toml = "0.8"

[workspace.dependencies.clap]
version = "4"
features = ["derive"]

[workspace.dependencies.reqwest]
version = "0.12"
features = [
    "blocking",
    "json",
]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]
