[workspace]
members = [
	# --- main facade
    "src/battery-pack",
	# --- CLI binary
    "src/cargo-bp",
	# --- helper crates
    "src/battery-pack/bphelper-build",
    "src/battery-pack/bphelper-cli",
    "src/battery-pack/bphelper-manifest",
	# --- battery packs
    "battery-packs/cli-battery-pack",
    "battery-packs/error-battery-pack",
    "battery-packs/logging-battery-pack",
]
resolver = "2"

[workspace.dependencies]
battery-pack = { path = "src/battery-pack", version = "0.4" }
anyhow = "1"
minijinja = { version = "2", features = ["loader"] }
cargo_metadata = "0.23"
handlebars = "6"
tempfile = "3"
serde_json = "1"
thiserror = "2"
toml = "0.8"

[workspace.dependencies.clap]
version = "4"
features = ["derive", "env"]

[workspace.dependencies.reqwest]
version = "0.13"
features = [
    "blocking",
    "json",
]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]
