[package]
name = "cli-battery-pack"
version = "0.4.2"
edition = "2024"
description = "Battery pack for building CLI applications in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/battery-pack-rs/battery-pack"
keywords = ["battery-pack", "cli", "clap", "terminal"]

[package.metadata.battery.templates]
simple = { path = "templates/simple", description = "Minimal CLI with argument parsing" }
subcmds = { path = "templates/subcmds", description = "CLI with subcommands" }

[package.metadata.battery-pack]
hidden = ["battery-pack"]

[dependencies]
battery-pack = { workspace = true }
anyhow = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
console = { version = "0.15", optional = true }
dialoguer = { version = "0.11", optional = true }
ignore = { version = "0.4", optional = true }
indicatif = { version = "0.17", optional = true }
regex = { version = "1", optional = true }

[build-dependencies]
battery-pack = { workspace = true, features = ["build"] }

[features]
default = ["anyhow", "clap", "dialoguer"]
indicators = ["indicatif", "console"]
search = ["regex", "ignore"]

[dev-dependencies]
battery-pack = { workspace = true, features = ["cli"] }