[package]
name = "cli-battery-pack"
version = "0.4.4"
edition = "2024"
description = "Battery pack for building CLI applications in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/battery-pack-rs/battery-pack"
keywords = ["battery-pack", "cli", "clap", "terminal"]

[package.metadata.battery.templates]
simple = { path = "templates/simple", description = "Minimal CLI with argument parsing" }
subcmds = { path = "templates/subcmds", description = "CLI with subcommands" }

[package.metadata.battery-pack]
hidden = ["battery-pack"]

[dependencies]
battery-pack = { workspace = true }

anstream = { version = "1.0.0", optional = true }
anstyle = { version = "1.0.14", optional = true }
anstyle-hyperlink = { version = "1.0.2", optional = true }
supports-hyperlinks = { version = "3.2.0", optional = true }

anyhow = { version = "1", optional = true }

clap = { version = "4", features = ["derive"], optional = true }
colorchoice-clap = { version = "1.0.8", optional = true }
wild = { version = "2.2.1", optional = true }

dialoguer = { version = "0.11", optional = true }

human-panic = { version = "2.0.8", optional = true }

console = { version = "0.15", optional = true }
indicatif = { version = "0.17", optional = true }

ignore = { version = "0.4", optional = true }
regex = { version = "1", optional = true }

etcetera = { version = "0.11.0", optional = true }

[build-dependencies]
battery-pack = { workspace = true, features = ["build"] }

[dev-dependencies]
battery-pack = { workspace = true, features = ["cli"] }
snapbox = { version = "1.2.1", features = ["cmd"] }

[features]
default = [
    "anstream",
    "anstyle",
    "anstyle-hyperlink",
    "supports-hyperlinks",

    "anyhow",

    "clap",
    "colorchoice-clap",
    "wild",

    "dialoguer",

    "human-panic",
]
indicators = ["indicatif", "console"]
search = ["regex", "ignore"]
config = ["etcetera"]
