[package]
name = "battery-pack"
version = "0.2.0"
edition = "2024"
description = "Curated crate bundles with docs, templates, and agentic skills"
license = "MIT OR Apache-2.0"
repository = "https://github.com/battery-pack-rs/battery-pack"
keywords = ["battery-pack", "curation", "templates", "cargo"]

[[bin]]
name = "cargo-bp"
path = "src/main.rs"

[dependencies]
bphelper-build = { path = "bphelper-build", version = "0.2.0" }
bphelper-cli = { path = "bphelper-cli", version = "0.2.0" }
anyhow.workspace = true

[dev-dependencies]
expect-test.workspace = true
