[package]
name = "battery-pack"
version = "0.4.11"
edition = "2024"
description = "Curated crate bundles with docs, templates, and agentic skills"
license = "MIT OR Apache-2.0"
repository = "https://github.com/battery-pack-rs/battery-pack"
keywords = ["battery-pack", "curation", "templates", "cargo"]
readme = "README.md"

[package.metadata.battery]
schema_version = 1

[package.metadata.battery.templates]
default = { path = "templates/default", description = "Starter template for authoring a battery pack" }
with_template = { path = "templates/with_template", description = "Starter template with an example project template" }

[features]
default = []
build = ["bphelper-build"]
cli = ["bphelper-cli"]

[dependencies]
bphelper-build = { path = "bphelper-build", version = "0.4.5", optional = true }
bphelper-cli = { path = "bphelper-cli", version = "0.7.3", optional = true }
bphelper-manifest = { path = "bphelper-manifest", version = "0.5.4" }
anyhow.workspace = true

[dev-dependencies]
battery-pack = { path = ".", features = ["build", "cli"] }
