[package]
name = "cli-battery-pack"
version = "0.3.0"
edition = "2024"
description = "Battery pack for building CLI applications in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/battery-pack-rs/battery-pack"
keywords = ["battery-pack", "cli", "clap", "terminal"]

[package.metadata.battery]
schema_version = 1

[package.metadata.battery.templates]
simple = { path = "templates/simple", description = "Minimal CLI with argument parsing" }
subcmds = { path = "templates/subcmds", description = "CLI with subcommands" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "cli-battery-pack"
path = "src/main.rs"

[build-dependencies]
battery-pack = { path = "../battery-pack", version = "0.3.0" }

[dependencies]
# Re-export from other battery packs
error-battery-pack = { path = "../error-battery-pack", version = "0.3.0" }
logging-battery-pack = { path = "../logging-battery-pack", version = "0.3.0" }

# CLI-specific crates
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
regex = "1"
ignore = "0.4"
