[package]
name = "error-battery-pack"
version = "0.1.0"
edition = "2024"
description = "Battery pack for error handling in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nikomatsakis/battery-pack"
keywords = ["battery-pack", "error", "anyhow", "thiserror"]

[package.metadata.battery]
schema_version = 1

[lib]
path = "src/lib.rs"

[build-dependencies]
battery-pack = { path = "../battery-pack", version = "0.1.0" }

[dependencies]
anyhow = "1"
thiserror = "2"
