[package]
name = "error-battery-pack"
version = "0.4.0"
edition = "2024"
description = "Error handling"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["battery-pack"]

[dependencies]
battery-pack = "0.4"

[dev-dependencies]
anyhow = "1"
thiserror = "2.0.18"
# serde = { version = "1", features = ["derive"] }

# Optional: narrow the default set and define named sets
# [package.metadata.battery-pack]
# default = ["clap", "serde"]
#
# [package.metadata.battery-pack.sets]
# json = { serde_json = {} }
# fancy = { clap = { features = ["color"] } }
