[package]
name = "logging-battery-pack"
version = "0.4.0"
edition = "2024"
description = "Battery pack for logging and tracing in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/battery-pack-rs/battery-pack"
keywords = ["battery-pack", "logging", "tracing"]

[dependencies]
battery-pack.workspace = true

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
