[package]
name = "bphelper-cli"
version = "0.7.6"
edition = "2024"
description = "CLI for creating and managing battery packs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/battery-pack-rs/battery-pack"
keywords = ["battery-pack", "cli", "cargo"]

[dependencies]
bphelper-manifest = { path = "../bphelper-manifest", version = "0.5.4" }
clap.workspace = true
clap_complete = { workspace = true, features = ["unstable-dynamic"] }
minijinja.workspace = true
walkdir.workspace = true
cargo_metadata.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
flate2 = "1"
tar = "0.4"
tempfile = "3"
console = "0.15"
urlencoding = "2"
ratatui = "0.30"
crossterm = "0.28"
open = "5"
dialoguer = "0.11"
regex = "1"
syn = { version = "2", features = ["full"] }
toml_edit = "0.22"
semver = "1"
yaml-rust2 = "0.9"
similar = "2"
syntect = { version = "5", default-features = false, features = ["default-themes", "default-syntaxes", "regex-fancy"] }
two-face = "0.5"

[dev-dependencies]
indoc = "2"
snapbox.workspace = true
tempfile = "3"
