[package]
name = "bphelper-manifest"
version = "0.4.0"
edition = "2024"
description = "Shared battery pack manifest parsing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/battery-pack-rs/battery-pack"
keywords = ["battery-pack"]

[dependencies]
toml.workspace = true
serde.workspace = true

[dev-dependencies]
expect-test.workspace = true
