[package]
name = "basic-battery-pack"
version = "0.1.0"
edition = "2021"
description = "A simple test battery pack"
keywords = ["battery-pack"]

[dependencies]
# These are the curated crates — they become regular deps for users
anyhow = "1"
thiserror = "2"
eyre = { version = "0.6", optional = true }

[features]
default = ["anyhow", "thiserror"]
all-errors = ["anyhow", "thiserror", "eyre"]
