[package]
name = "basic-battery-pack"
version = "0.1.0"
edition = "2021"
description = "A simple test battery pack"
keywords = ["battery-pack"]

[dependencies]
# These are the curated crates — they become regular deps for users
anyhow = { version = "1", optional = true }
thiserror = { version = "2", optional = true }
eyre = { version = "0.6", optional = true }

[features]
default = ["anyhow", "thiserror"]
all-errors = ["anyhow", "thiserror", "eyre"]
