[package]
name = "broken-battery-pack"
version = "0.1.0"
edition = "2021"
description = "A deliberately broken battery pack for testing validation"
# Missing keywords = ["battery-pack"] — violates format.crate.keyword

[dependencies]
clap = { version = "4", optional = true }

[features]
default = ["clap"]

[package.metadata.battery.templates]
missing = { path = "templates/missing", description = "This template dir does not exist" }
