[package]
name = "fancy-battery-pack"
version = "0.2.0"
edition = "2021"
description = "A feature-rich test battery pack"
repository = "https://github.com/example/fancy"
keywords = ["battery-pack"]

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
indicatif = { version = "0.17", optional = true }
console = { version = "0.15", optional = true }
# Internal dep that should be hidden
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[build-dependencies]
cc = "1.0"

[features]
default = ["clap", "dialoguer"]
indicators = ["indicatif", "console"]
fancy = ["clap", "dialoguer", "indicatif", "console"]

[package.metadata.battery-pack]
hidden = ["serde*", "cc"]

[package.metadata.battery.templates]
default = { path = "templates/default", description = "Basic CLI app" }
full = { path = "templates/full", description = "Full-featured CLI with indicators" }
