[package]
name = "{{ project_name }}"
version = "0.1.0"
edition = "2024"
description = "A CLI application with subcommands"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { bp-managed = true }
clap = { bp-managed = true }
dialoguer = { bp-managed = true }
tracing = { bp-managed = true }
tracing-subscriber = { bp-managed = true }

[build-dependencies]
cli-battery-pack = { bp-managed = true }
logging-battery-pack = { bp-managed = true }

[package.metadata.battery-pack]
cli-battery-pack = { features = ["default"] }
logging-battery-pack = { features = ["default"] }
