[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
description = "A battery pack for ..."
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.battery]
schema_version = 1

# Optional: exclude crates from the facade
# exclude = ["internal-helper"]

# Optional: organize crates into modules
# [package.metadata.battery.modules]
# async = ["tokio", "futures"]

[dependencies]
# Add your curated dependencies here:
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }

[build-dependencies]
battery-pack = "0.3"
